--- a/templates/tomo-web-sdk-app/package.json
+++ b/templates/tomo-web-sdk-app/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tomo-inc/tomo-web-sdk": "1.0.1-test.3",
+    "@keyv/sqlite": "^4.0.1",
+    "@tomo-inc/tomo-web-sdk": "latest",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@solana/web3.js": "^1.98.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
